mmm-daily-pokemon.css
/*
 *
 * mmm-daily-pokemon
 *
 *
 * MIT Licensed.
 *
 * Custom here your css module
 *
 */

@font-face {
	font-family: pokegb;
	src: url(fonts/pokemon_font.ttf);
	}

#poke-wrapper {
	margin-left: auto;
	margin-right: auto;
}

#flex-wrapper div {
	width: 100%;
}

#flex-wrapper {
	display: flex;
	align-content: center;
}

#poke-name {
	border-bottom: 1px solid white;
	color: white;
	text-align: center;
}

#poke-subname {
	text-align: center;
	font-size: 0.6em;
}

#img-wrapper {
	height: 150px;
	width: 100%;
}

#poke-pic {
	width: auto;
	height: 100%;
}

#poke-pic-grayscale {
	width: auto;
	height: 100%;
	filter: grayscale(100%);
}

.type-img-wrapper {
	height: 50px;
	width: 50px;
}

.poke-pic-grayscale-type {
	width: 50px;
	height: auto;
	filter: grayscale(100%);
}

#poke-types {
	padding: 0px;
}

#poke-types span {
	text-decoration: none;
	display: inline-block;
	margin-right: 3px;
	padding: 0px;
}

#poke-wrapper table {
	line-height: 1em;
}

#poke-wrapper #poke-info{
	text-align: center;
}
#poke-wrapper table tr td {
	font-size: 12pt;
	padding: 0px;
	text-transform: capitalize;
}

#poke-table-name {
	color: DDD;
	font-weight: 800;
	text-align: left;
}

